front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  namespace: react-demo  # Added namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - name: react
          image: mrstjch/todo-frontend:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
