front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: react-demo  # Added namespace
  labels:
    app: front-end
spec:
  type: NodePort
  selector:
    app: front-end
  ports:
    - name: frontend
      port: 80
      targetPort: 3000
