front/front-ingress.yaml
# front-end-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end-ingress
  labels:
    name: front-end
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: todo.mrstjch.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: react
                port:
                  number: 80
